fixed width on mobile view

--- a/css/faculty-css/dashboard.css
+++ b/css/faculty-css/dashboard.css
@@ -431,8 +431,12 @@ span {
 
     .table-responsive th,
     .table-responsive td {
-        min-width: 80px;
+        min-width: 1px;
     }
+    .sched-table{
+        padding: 0 !important;
+    }
+    
 
 }
 
